# nikola

./: .gitignore  LICENSE  Makefile  Makefile.cu  Makefile.language-c-quote  README  README.mkd  Setup.hs  configure  configure.ac  nikola.buildinfo.in  nikola.cabal  test.hs
cbits/: stubs.c
examples/: embed.hs  matmul.hs  nikola.hs  scan.hs  template.hs
examples/american/: Main.hs
examples/american/American/: Nikola.hs  Vector.hs
examples/american/American/Nikola/: Implementation.hs
examples/append-delayed/: Main.hs
examples/append-push/: Main.hs
examples/blackscholes/: Main.hs
examples/blackscholes-compile/: Main.hs  blackscholes.cc
examples/blackscholes-compile/BlackScholes/: Nikola.hs
examples/blackscholes/BlackScholes/: CUDA.hs  Nikola.hs  Nikola2.hs  Vector.hs
examples/common/: GUI.hs
examples/mandel/: Mandel.hs
examples/mandelbrot/: Config.hs  GUI.hs  Main.hs  Mandel.hs  ParseConfig.hs
examples/mandelbrot-compile/: Main.hs  mandelbrot.cc  mandelbrot_cuda_2.cu  mandelbrot_cuda_3.cu  mandelbrot_cuda_4.cu
examples/mandelbrot/GUI/: Commands.hs
examples/mandelbrot/Mandelbrot/: Nikola.hs  NikolaV1.hs  NikolaV2.hs  NikolaV3.hs  NikolaV4.hs  NikolaV5.hs  Repa.hs  RepaV1.hs  RepaV2.hs  RepaV3.hs  Types.hs
examples/mandelbrot/Mandelbrot/Nikola/: Implementation.hs
examples/mandelbrot/Mandelbrot/NikolaV1/: Implementation.hs
examples/mandelbrot/Mandelbrot/NikolaV2/: Implementation.hs
examples/mandelbrot/Mandelbrot/NikolaV3/: Implementation.hs
examples/mandelbrot/Mandelbrot/NikolaV4/: Implementation.hs
examples/mandelbrot/Mandelbrot/NikolaV5/: Implementation.hs
examples/radix/: Main.hs
examples/radix/Data/Vector/Algorithms/: Common.hs  Radix.hs
examples/search/: CGen.hs  Main.hs
include/: Nikola.h.in
internal/: GenUnboxTuple.hs  unbox-tuple-instances
src/: Nikola.hs
src/CUDA/: Alloc.hs  Compile.hs  Context.hs  Event.hs  Internal.hsc  Module.hs  Storable.hs  Stream.hs
src/Control/Monad/: ContextException.hs  Exception.hs
src/Data/: IString.hs  Loc.hs
src/Data/Array/: Nikola.hs
src/Data/Array/Nikola/: Array.hs  Combinators.hs  Embed.hs  Eval.hs  Exp.hs  Pretty.hs  Program.hs  Quote.hs  Reify.hs  Representable.hs  Shape.hs  Util.hs
src/Data/Array/Nikola/Backend/: CUDA.hs  Flags.hs  Main.hs
src/Data/Array/Nikola/Backend/C/: Codegen.hs  Monad.hs  Quoters.hs
src/Data/Array/Nikola/Backend/CUDA/: CodeGen.hs  Compile.hs  Exec.hs  Haskell.hs  Monad.hs  Nvcc.hs  TH.hs  Target.hs
src/Data/Array/Nikola/Backend/CUDA/Haskell/: Compile.hs  Ex.hs
src/Data/Array/Nikola/Backend/CUDA/TH/: Compile.hs  Util.hs
src/Data/Array/Nikola/Eval/: Load.hs  Target.hs
src/Data/Array/Nikola/Language/: Check.hs  Generic.hs  Monad.hs  Monad.hs-boot  Optimize.hs  Reify.hs  Sharing.hs  Smart.hs  Syntax.hs
src/Data/Array/Nikola/Language/Optimize/: CSE.hs  Inliner.hs  Monad.hs  Occ.hs  Simpl.hs  Subst.hs
src/Data/Array/Nikola/Language/Reify/: Monad.hs  Monad.hs-boot
src/Data/Array/Nikola/Operators/: IndexSpace.hs  Mapping.hs  Reduction.hs
src/Data/Array/Nikola/Reify/: Monad.hs  Monad.hs-boot
src/Data/Array/Nikola/Repr/: Delayed.hs  Global.hs  HintIrregular.hs  Manifest.hs  Push.hs
src/Data/Array/Nikola/Util/: Bool.hs  Generic.hs  Pretty.hs  Quote.hs  Random.hs  Statistics.hs
src/Data/Array/Repa/: Mutable.hs
src/Data/Array/Repa/Repr/: CUDA.hs  UnboxedForeign.hs
src/Data/Array/Repa/Repr/CUDA/: ForeignPtr.hs  UnboxedForeign.hs
src/Data/Vector/: UnboxedForeign.hs
src/Data/Vector/CUDA/: Storable.hs  UnboxedForeign.hs
src/Data/Vector/CUDA/Storable/: Internal.hs  Mutable.hs
src/Data/Vector/CUDA/UnboxedForeign/: Base.hs  Mutable.hs
src/Data/Vector/UnboxedForeign/: Base.hs  Mutable.hs
src/Foreign/CUDA/: ForeignPtr.hs  Storable.hs
src/Foreign/CUDA/Driver/: Graphics.chs
src/Foreign/CUDA/Driver/Graphics/: OpenGL.chs
src/Language/: C.hs
src/Language/C/: Parser.hs  Pretty.hs  Properties.hs  Smart.hs  Syntax.hs
src/Language/C/Parser/: Exceptions.hs  Lexer.x  Monad.hs  Parser.y  Tokens.hs
src/Language/C/Quote/: Base.hs  C.hs  CUDA.hs  GCC.hs
src/Nikola/: CGen.hs  Check.hs  Compile.hs  Embeddable.hs  Exec.hs  Nvcc.hs  Pretty.hs  Quote.hs  Reify.hs  Reify.hs-boot  Representable.hs  Smart.hs  Syntax.hs  ToC.hs  Util.hs
src/Nikola/Backend/CUDA/: CodeGen.hs  Monad.hs
src/Nikola/Embeddable/: Base.hs  Class.hs  Hmatrix.hs  Vector.hs
src/Nikola/Reify/: Monad.hs  Monad.hs-boot
src/Text/PrettyPrint/: Mainland.hs
tests/: Demo.hs  Main.hs  benchmark.hs  compile.hs  nikola.hs  quoting.hs
tests/unit/: Funs.hs  Main.hs
