name:           nikola
version:        0.2.1
cabal-version:  >= 1.8
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2006-2012 Harvard University
author:         Geoffrey Mainland <mainland@eecs.harvard.edu>
maintainer:     mainland@eecs.harvard.edu
stability:      alpha
homepage:       http://www.eecs.harvard.edu/~mainland/projects/nikola
category:       Language
synopsis:       Embedded language for GPU computation

build-type:     Custom

flag benchmarks
  description: Build benchmark programs.
  default:     False

flag tests
  description: Build test programs.
  default:     False

flag examples
  description: Build example programs.
  default:     False

flag hmatrix
  description: Build classes necessary for Hmatrix itegration.
  default:     False

library
  exposed-modules:
    Nikola
    Nikola.Backend.CUDA.CodeGen
    Nikola.Backend.CUDA.Monad
    Nikola.Check
    Nikola.Compile
    Nikola.Exec
    Nikola.Nvcc
    Nikola.Quote
    Nikola.Reify
    Nikola.Reify.Monad
    Nikola.Representable
    Nikola.Smart
    Nikola.Syntax
    Nikola.Util

  build-depends:
    base >=4 && <5,
    bytestring >=0.9 && <0.10,
    containers >=0.4 && <0.5,
    cuda ==0.4.*,
    exception-mtl >=0.3 && <0.4,
    exception-transformers >=0.3 && <0.4,
    language-c-quote >=0.4 && <0.5,
    mainland-pretty >=0.2.1 && <0.3,
    mersenne-random-pure64 >=0.2 && <0.3,
    mtl >=2 && <3,
    process >=1.0 && <1.2,
    random >=1.0 && <1.1,
    srcloc >=0.2 && <0.3,
    syb >=0.3 && <0.4,
    symbol >=0.1 && <0.2,
    vector >=0.9 && <0.10

  if impl(ghc >= 7.0) && impl(ghc < 7.2)
    build-depends:
      template-haskell >=2.5 && <2.6

  if impl(ghc >= 7.4) && impl(ghc < 7.6)
    build-depends:
      template-haskell >=2.7 && <2.8

  if flag(hmatrix)
    build-depends:
      hmatrix >=0.14 && <0.15

    cpp-options: -DHMATRIX

  hs-source-dirs:  src
  include-dirs:	   include

executable blackscholes
  build-depends:
    base >=4 && <5,
    criterion >=0.6 && <0.7,
    language-c-quote >=0.4 && <0.5,
    mtl >=2 && <3,
    nikola >=0.2 && <0.3,
    mainland-pretty >=0.2.1 && <0.3,
    srcloc >=0.2 && <0.3,
    statistics >=0.10 && <0.11,
    symbol >=0.1 && <0.2,
    vector >=0.9 && <0.10

  main-is: 	   Main.hs
  hs-source-dirs:  examples/blackscholes

  if flag(examples)
    buildable: True
  else
    buildable: False

executable blackscholes-compile
  build-depends:
    base >=4 && <5,
    criterion >=0.6 && <0.7,
    language-c-quote >=0.4 && <0.5,
    mtl >=2 && <3,
    nikola >=0.2 && <0.3,
    mainland-pretty >=0.2.1 && <0.3,
    statistics >=0.10 && <0.11,
    vector >=0.9 && <0.10

  main-is: 	   Main.hs
  hs-source-dirs:  examples/blackscholes-compile

  if flag(examples)
    buildable: True
  else
    buildable: False

executable radix
  build-depends:
    base >=4 && <5,
    criterion >=0.6 && <0.7,
    mtl >=2 && <3,
    nikola >=0.2 && <0.3,
    statistics >=0.10 && <0.11,
    vector >=0.9 && <0.10,
    vector-algorithms >=0.5 && <0.6

  main-is: 	   Main.hs
  hs-source-dirs:  examples/radix

  if flag(examples)
    buildable: True
  else
    buildable: False

executable search
  build-depends:
    base >=4 && <5,
    containers >=0.4 && <0.5,
    cuda ==0.4.*,
    language-c-quote >=0.4 && <0.5,
    logict >=0.5 && <0.6,
    mainland-pretty >=0.2.1 && <0.3,
    mtl >=2 && <3,
    nikola >=0.2 && <0.3,
    srcloc >=0.2 && <0.3,
    statistics >=0.10 && <0.11,
    symbol >=0.1 && <0.2,
    uniplate >=1.5 && <1.7,
    vector >=0.9 && <0.10

  main-is: 	   Main.hs
  hs-source-dirs:  examples/search

  ghc-options: -W -Werror

  if flag(hmatrix) && flag(examples)
    build-depends:
      hmatrix >=0.14 && <0.15

    buildable: True
  else
    buildable: False

source-repository head
  type:     git
  location: git://github.com/mainland/nikola.git
