name:           nikola
version:        0.9
cabal-version:  >= 1.10
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2009-2010 Harvard University
		(c) 2011-2012 Geoffrey Mainland
author:         Geoffrey Mainland <mainland@apeiron.net>
maintainer:     mainland@apeiron.net
stability:      alpha
homepage:       http://www.eecs.harvard.edu/~mainland/projects/nikola
category:       Language
synopsis:       Embedded language for GPU computation

build-type:     Custom

extra-tmp-files:
  config.status
  config.log
  nikola.buildinfo
  include/Nikola.h

extra-source-files:
  configure
  configure.ac
  config.guess
  config.sub
  install-sh
  nikola.buildinfo.in
  include/Nikola.h.in

extra-source-files:
  internal/GenUnboxTuple.hs
  internal/unbox-tuple-instances

flag examples
  description: Build example programs.
  default:     False

flag optimize
  description: Build optimized versions of the example programs.
  default:     False

library
  exposed-modules:
    Data.Array.Nikola.Array
    Data.Array.Nikola.Backend.C.Codegen
    Data.Array.Nikola.Backend.C.Monad
    Data.Array.Nikola.Backend.C.Quoters
    Data.Array.Nikola.Backend.CUDA
    Data.Array.Nikola.Backend.CUDA.Haskell
    Data.Array.Nikola.Backend.CUDA.Haskell.Compile
    Data.Array.Nikola.Backend.CUDA.Haskell.Ex
    Data.Array.Nikola.Backend.CUDA.Nvcc
    Data.Array.Nikola.Backend.CUDA.TH
    Data.Array.Nikola.Backend.CUDA.TH.Compile
    Data.Array.Nikola.Backend.CUDA.TH.Util
    Data.Array.Nikola.Backend.Flags
    Data.Array.Nikola.Backend.Main
    Data.Array.Nikola.Combinators
    Data.Array.Nikola.Eval
    Data.Array.Nikola.Eval.Load
    Data.Array.Nikola.Eval.Target
    Data.Array.Nikola.Exp
    Data.Array.Nikola.Language.Check
    Data.Array.Nikola.Language.Generic
    Data.Array.Nikola.Language.Monad
    Data.Array.Nikola.Language.Optimize
    Data.Array.Nikola.Language.Optimize.Monad
    Data.Array.Nikola.Language.Optimize.Occ
    Data.Array.Nikola.Language.Optimize.Simpl
    Data.Array.Nikola.Language.Optimize.Subst
    Data.Array.Nikola.Language.Reify
    Data.Array.Nikola.Language.Sharing
    Data.Array.Nikola.Language.Syntax
    Data.Array.Nikola.Operators.IndexSpace
    Data.Array.Nikola.Operators.Mapping
    Data.Array.Nikola.Operators.Reduction
    Data.Array.Nikola.Program
    Data.Array.Nikola.Repr.Delayed
    Data.Array.Nikola.Repr.Global
    Data.Array.Nikola.Repr.Push
    Data.Array.Nikola.Shape
    Data.Array.Nikola.Util.Bool
    Data.Array.Nikola.Util.Generic
    Data.Array.Nikola.Util.Pretty
    Data.Array.Nikola.Util.Quote
    Data.Array.Nikola.Util.Statistics
    Data.Array.Nikola.Util.Random
    Data.Array.Repa.Repr.CUDA.ForeignPtr
    Data.Array.Repa.Repr.CUDA.UnboxedForeign
    Data.Array.Repa.Repr.UnboxedForeign
    Data.Vector.CUDA.Storable
    Data.Vector.CUDA.Storable.Internal
    Data.Vector.CUDA.Storable.Mutable
    Data.Vector.CUDA.UnboxedForeign
    Data.Vector.CUDA.UnboxedForeign.Base
    Data.Vector.CUDA.UnboxedForeign.Mutable
    Data.Vector.UnboxedForeign
    Data.Vector.UnboxedForeign.Base
    Data.Vector.UnboxedForeign.Mutable
    Foreign.CUDA.Driver.Graphics
    Foreign.CUDA.Driver.Graphics.OpenGL
    Foreign.CUDA.ForeignPtr
    Foreign.CUDA.Storable

  other-modules:
    Foreign.CUDA.Internal.C2HS

  build-depends:
    OpenGL == 2.5.*,
    base >=4 && <5,
    bytestring >=0.9 && <0.10,
    containers >=0.4 && <0.5,
    cuda >=0.4.1,
    exception-mtl >=0.3 && <0.4,
    exception-transformers >=0.3 && <0.4,
    language-c-quote >=0.4 && <0.5,
    mainland-pretty >=0.2.1 && <0.3,
    mersenne-random-pure64 >=0.2 && <0.3,
    mtl >=2 && <3,
    process >=1.0 && <1.2,
    primitive >=0.4 && <0.5,
    random >=1.0 && <1.1,
    repa >=3.2 && <3.3,
    srcloc >=0.2 && <0.3,
    syb >=0.3 && <0.4,
    symbol >=0.1 && <0.2,
    text >=0.11 && <0.12,
    transformers >=0.2 && <0.4,
    vector >=0.9 && <0.10

  build-tools: 
    c2hs >= 0.16,
    hsc2hs

  default-language: Haskell98

  if impl(ghc >= 7.0) && impl(ghc < 7.2)
    build-depends:
      template-haskell >=2.5 && <2.6

  if impl(ghc >= 7.4) && impl(ghc < 7.6)
    build-depends:
      template-haskell >=2.7 && <2.8

  hs-source-dirs:  src
  include-dirs:	   include, internal

executable blackscholes
  build-depends:
    base >=4 && <5,
    criterion >=0.6 && <0.7,
    deepseq >=1.3 && <1.4,
    mtl >=2 && <3,
    nikola >=0.9 && <0.10,
    statistics >=0.10 && <0.11,
    vector >=0.9 && <0.10

  main-is: 	    Main.hs
  hs-source-dirs:   examples/blackscholes
  default-language: Haskell98

  if flag(examples)
    buildable: True
  else
    buildable: False

  if flag(optimize)
    ghc-options: -O3
    ghc-options: -fllvm -optlo-O3
    ghc-options: -fno-liberate-case
    ghc-options: -funfolding-use-threshold1000 -funfolding-keeness-factor1000

executable american
  build-depends:
    base >=4 && <5,
    criterion >=0.6 && <0.7,
    mtl >=2 && <3,
    nikola >=0.9 && <0.10,
    statistics >=0.10 && <0.11,
    vector >=0.9 && <0.10

  main-is: 	    Main.hs
  hs-source-dirs:   examples/american
  default-language: Haskell98

  if flag(examples)
    buildable: True
  else
    buildable: False

  if flag(optimize)
    ghc-options: -O3
    ghc-options: -fllvm -optlo-O3
    ghc-options: -fno-liberate-case
    ghc-options: -funfolding-use-threshold1000 -funfolding-keeness-factor1000

executable mandelbrot
  build-depends:
    OpenGL == 2.5.*,
    GLUT == 2.3.*,
    base >=4 && <5,
    containers >=0.4 && <0.5,
    criterion >=0.6 && <0.7,
    cuda >=0.4.1,
    mtl >=2 && <3,
    nikola >=0.9 && <0.10,
    repa >=3.2 && <3.3,
    statistics >=0.10 && <0.11,
    vector >=0.9 && <0.10

  main-is: 	    Main.hs
  hs-source-dirs:   examples/mandelbrot
  default-language: Haskell98

  if flag(examples)
    buildable: True
  else
    buildable: False

  if flag(optimize)
    ghc-options: -threaded
    ghc-options: -O3
    ghc-options: -fllvm -optlo-O3
    ghc-options: -fno-liberate-case
    ghc-options: -funfolding-use-threshold1000 -funfolding-keeness-factor1000

executable blackscholes-compile
  build-depends:
    base >=4 && <5,
    language-c-quote >=0.4 && <0.5,
    mtl >=2 && <3,
    nikola >=0.9 && <0.10,
    mainland-pretty >=0.2.1 && <0.3,
    statistics >=0.10 && <0.11,
    vector >=0.9 && <0.10

  main-is: 	    Main.hs
  hs-source-dirs:   examples/blackscholes-compile
  default-language: Haskell98

  if flag(examples)
    buildable: True
  else
    buildable: False

test-suite unit
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests/unit
  main-is:          Main.hs
  default-language: Haskell98

  build-depends:
    HUnit >=1.2 && <1.3,
    QuickCheck >= 2.4,
    base >=4 && <5,
    cuda >=0.4.1,
    mtl >=2 && <3,
    nikola >=0.9 && <0.10,
    repa >=3.2 && <3.3,
    test-framework >= 0.6,
    test-framework-hunit,
    test-framework-quickcheck2,
    vector >=0.9 && <0.10

source-repository head
  type:     git
  location: git://github.com/mainland/nikola.git
